Fix overlapping popup with pagination, Fixes #192

--- a/ckanext/lacounts/src/css/helper.css
+++ b/ckanext/lacounts/src/css/helper.css
@@ -31,7 +31,7 @@
     opacity: 0;
     position: absolute;
     left: 0;
-    z-index: 1;
+    z-index: 10;
 
     @media (--small-up) {
       left: auto;
